Fix animations in Webkit
Broken in iOS/Safari:
  * If transform-origin is not in the Z=0 plane, the entire element is moved along the Z axis in weird ways. I guess Webkit tries to position the transform origin always in the Z=0 plane, but I'm not exactly sure about the details because the effects were very bizarre. Fixed it by doing a lot of weird transformations.
  * Animating the opacity on the tiles breaks when combined with all those crazy transformations. It only affected the background, but not the letters. Was not able to create a minimal reproducing example. Disabled the opacity transition altogether since it doesnt looks so bad.

--- a/index.css
+++ b/index.css
@@ -99,22 +99,35 @@ h1 {
 .board {
   display: grid;
   font-weight: 700;
-  perspective: 800px;
+}
+
+.board .cell {
+  transition: transform 300ms;
+  transition-timing-function: cubic-bezier(.67, 1.76, .16, .55);
+  transform-style: preserve-3d;
+}
+
+.board .cell .front-face {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
 }
 
 .board .tile {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  transform-origin: inherit;
-  transition: transform 300ms, opacity 300ms;
-  transition-timing-function: cubic-bezier(.67, 1.76, .16, .55);
 }
 
-.board .input.tile {
-  position: relative;
+.board .status.tile {
+  transform-origin: top center;
+  transform: rotateX(90deg) translateY(-100%);
 }
 
 .board .input.tile .border {
@@ -132,7 +145,7 @@ h1 {
   transition: top 100ms;
 }
 
-.board .input.tile.empty .lower.border {
+.board .empty.cell .input.tile .lower.border {
   top: 80%;
   border-top-width: 0;
 }
@@ -146,30 +159,28 @@ h1 {
   transition: left 100ms, width 100ms;
 }
 
-.board .input.tile.empty .top.border {
+.board .empty.cell .input.tile .top.border {
   left: 50%;
   width: 0;
 }
 
-.board .input.tile.committed {
-  transform: rotateX(-90deg);
+.board .cell[status] .input.tile {
   opacity: 0;
 }
 
-.board .status.tile:not([status]){
-  transform: rotateX(90deg);
+.board .cell:not([status]) .status.tile {
   opacity: 0;
 }
 
-.board .status.tile[status=match] {
+.board .cell[status=match] .status.tile {
   background-color: #2E7D32;
 }
 
-.board .status.tile[status=partial] {
+.board .cell[status=partial] .status.tile {
   background-color: #e5d456;
 }
 
-.board .status.tile[status=miss] {
+.board .cell[status=miss] .status.tile {
   background-color: #313a3c;
 }
 
